crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D107_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: UndocumentedPublicInit
    body: "Missing docstring in `__init__`"
    suggestion: ~
    fixable: false
  location:
    row: 60
    column: 8
  end_location:
    row: 60
    column: 16
  fix: ~
  parent: ~
- kind:
    name: UndocumentedPublicInit
    body: "Missing docstring in `__init__`"
    suggestion: ~
    fixable: false
  location:
    row: 541
    column: 8
  end_location:
    row: 541
    column: 16
  fix: ~
  parent: ~

