crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D200_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: FitsOnOneLine
    body: One-line docstring should fit on one line
    suggestion: Reformat to one line
    fixable: true
  location:
    row: 129
    column: 4
  end_location:
    row: 131
    column: 7
  fix:
    content: "\"\"\"Wrong.\"\"\""
    location:
      row: 129
      column: 4
    end_location:
      row: 131
      column: 7
  parent: ~
- kind:
    name: FitsOnOneLine
    body: One-line docstring should fit on one line
    suggestion: Reformat to one line
    fixable: true
  location:
    row: 604
    column: 4
  end_location:
    row: 606
    column: 13
  fix:
    content: "\"\"\"Wrong.\"\"\""
    location:
      row: 604
      column: 4
    end_location:
      row: 606
      column: 13
  parent: ~
- kind:
    name: FitsOnOneLine
    body: One-line docstring should fit on one line
    suggestion: Reformat to one line
    fixable: true
  location:
    row: 613
    column: 4
  end_location:
    row: 615
    column: 7
  fix:
    content: "r\"\"\"Wrong.\"\"\""
    location:
      row: 613
      column: 4
    end_location:
      row: 615
      column: 7
  parent: ~
- kind:
    name: FitsOnOneLine
    body: One-line docstring should fit on one line
    suggestion: Reformat to one line
    fixable: true
  location:
    row: 622
    column: 4
  end_location:
    row: 624
    column: 7
  fix: ~
  parent: ~
- kind:
    name: FitsOnOneLine
    body: One-line docstring should fit on one line
    suggestion: Reformat to one line
    fixable: true
  location:
    row: 631
    column: 4
  end_location:
    row: 633
    column: 14
  fix: ~
  parent: ~

