crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D201_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 137
    column: 4
  end_location:
    row: 137
    column: 24
  fix:
    content: ""
    location:
      row: 136
      column: 0
    end_location:
      row: 137
      column: 0
  parent: ~
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 151
    column: 4
  end_location:
    row: 151
    column: 37
  fix:
    content: ""
    location:
      row: 150
      column: 0
    end_location:
      row: 151
      column: 0
  parent: ~
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 553
    column: 4
  end_location:
    row: 556
    column: 7
  fix:
    content: ""
    location:
      row: 552
      column: 0
    end_location:
      row: 553
      column: 0
  parent: ~
- kind:
    name: NoBlankLineBeforeFunction
    body: No blank lines allowed before function docstring (found 1)
    suggestion: Remove blank line(s) before function docstring
    fixable: true
  location:
    row: 575
    column: 4
  end_location:
    row: 578
    column: 7
  fix:
    content: ""
    location:
      row: 574
      column: 0
    end_location:
      row: 575
      column: 0
  parent: ~

