crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D205_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: BlankLineAfterSummary
    body: 1 blank line required between summary line and description
    suggestion: ~
    fixable: false
  location:
    row: 200
    column: 4
  end_location:
    row: 203
    column: 7
  fix: ~
  parent: ~
- kind:
    name: BlankLineAfterSummary
    body: 1 blank line required between summary line and description (found 2)
    suggestion: Insert single blank line
    fixable: true
  location:
    row: 210
    column: 4
  end_location:
    row: 215
    column: 7
  fix:
    content: "\n"
    location:
      row: 212
      column: 0
    end_location:
      row: 214
      column: 0
  parent: ~

