crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D209_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: NewLineAfterLastParagraph
    body: Multi-line docstring closing quotes should be on a separate line
    suggestion: Move closing quotes to new line
    fixable: true
  location:
    row: 281
    column: 4
  end_location:
    row: 283
    column: 19
  fix:
    content: "\n    "
    location:
      row: 283
      column: 16
    end_location:
      row: 283
      column: 16
  parent: ~
- kind:
    name: NewLineAfterLastParagraph
    body: Multi-line docstring closing quotes should be on a separate line
    suggestion: Move closing quotes to new line
    fixable: true
  location:
    row: 595
    column: 4
  end_location:
    row: 597
    column: 21
  fix:
    content: "\n    "
    location:
      row: 597
      column: 16
    end_location:
      row: 597
      column: 18
  parent: ~

